--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,47 +1,3 @@
-body {
-    flex-direction: column;
-    align-items: start;
-    min-height: 100vh;
-    padding: 0;
-    color: var(--slate);
-}
-
-h1 {
-    margin: 0 0 30px 4px;
-    color: var(--green-bright);
-    font-family: var(--font-mono);
-    font-weight: 400;
-    font-size: clamp(10px ,5vw, 20px);
-
-    @media (max-width: 480px) {
-      margin: 0 0 20px 2px;
-    }
-  }
-
-h2 {
-    color: var(--lightest-slate);
-    line-height: 0.9; 
-}
-
-h3 {
-    color: var(--slate);
-    line-height: 0.9;
-}
-
-p {
-    margin: 20px 0;
-    max-width: 540px;
-}
-
-.big-heading {
-    margin: 2.5px;
-    font-size: clamp(30px, 6vw, 60px);
-}
-
-.resume-link {
-    margin-top: 50px;
-}
-
 #intro-section {
     max-width: 1000px;
     margin: 0px auto;
@@ -52,4 +8,39 @@ p {
     min-height: 100vh;
     height: 100vh;
     padding: 0px;
+}
+
+#intro-section h1 {
+    margin: 0 0 25px 3px;
+    color: var(--green-bright);
+    font-family: 'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', monospace;;
+    font-weight: 400;
+    font-size: clamp(10px ,5vw, 20px);
+}
+
+#intro-section p {
+    margin: 20px 0;
+    max-width: 540px;
+    font-size: 18px;
+    color: var(--slate);
+}
+
+.big-heading {
+    margin: 3px;
+    font-size: clamp(30px, 6vw, 60px);
+}
+
+.cv-link {
+    margin-top: 50px;
+    font-size: 20px;
+    text-decoration: none;
+    color: var(--green-bright);
+    border: solid;
+    border-radius: 5px;
+    padding: 20px;
+    transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+}
+
+.cv-link:hover {
+    opacity: 0.5;
 }
