--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,9 @@
 #projects-section {
   max-width: 1000px;
+  margin: auto;
   min-height: 50vh;
-  margin-top: 50px;
-  padding-top: 50px;
+  padding: 50px 0;
+  display: flex;
+  flex-direction: column;
 }
 
