--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -1,11 +1,11 @@
-#about-me-section {
+#about {
   max-width: 1000px;
   margin: auto;
   min-height: 50vh;
-  padding-bottom: 50px;
+  padding: 50px 0;
 }
 
-#about-me-section p {
+#about p {
   margin-top: 0px;
   font-size: 18px;
   max-width: 700px;
@@ -17,8 +17,6 @@
 }
 
 #about-image {
-  /* padding-left: 40px;
-  padding-right: 40px; */
   padding-top: 20px;
 }
 
