--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,4 +1,4 @@
-#experience-section {
+#experience {
   max-width: 1000px;
   margin: auto;
   min-height: 50vh;
@@ -7,7 +7,7 @@
   flex-direction: column;
 }
 
-#experience-section ul {
+#experience ul {
   list-style: none;
   margin-left: -35px;
 }
@@ -79,7 +79,7 @@
 }
 
 @media only screen and (max-width: 600px) {
-  #experience-section {
+  #experience {
     padding-bottom: 0px;
   }
 
