--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 
 .App {
   background-color: var(--light-navy);
-  /* display: flex; */
   margin: auto;
 }
 
@@ -43,6 +42,7 @@ h3 {
 }
 
 p {
+  color: var(--slate);
   font-size: 18px;
 }
 
