--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,7 +1,7 @@
 #skills {
   max-width: 1000px;
   margin: auto;
-  min-height: 50vh;
+  /* min-height: 50vh; */
   padding: 50px 0;
   /* display: flex; */
   /* flex-direction: column; */
